--- a/src/main/resources/templates/companies/position-settings.html
+++ b/src/main/resources/templates/companies/position-settings.html
@@ -252,7 +252,7 @@
                     </option>
                     <option value="OPEN"
                             th:selected="${position.status.name() == 'OPEN'}">
-                        OPEN
+                        OPEN <!-- TEST -->
                     </option>
                 </select>
             </div>
