Fixed a bug in the main homepage

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -50,7 +50,7 @@
         }
 
         .left img {
-            width: 60%;
+            width: 80%;
             border-radius: 20px;
             object-fit: cover;
         }
@@ -119,7 +119,7 @@
     </div>
     <div class="right">
         <h1>Traineeship<br>Management</h1>
-        <p>Something something<br><br>small explanation</p>
+        <p>Welcome to the application!<br><br>University of Ioannina</p>
         <div class="buttons">
             <form action="/register" method="get">
                 <button class="signup">Sign up</button>
