Fixed a bug somewhere

--- a/src/main/resources/templates/user/registration-confirmation.html
+++ b/src/main/resources/templates/user/registration-confirmation.html
@@ -135,7 +135,7 @@
             </div>
             <p class="success-message">
                 Your account has been successfully created.<br>
-                You can now log in to access "something something idk".
+                You can now log in to access the traineeship management application.
             </p>
             <a href="/login" class="btn">Continue to Login</a>
             <div class="additional-info">
